plot_cloudmaskCH4.py

--- a/notebooks/color_palettes.ipynb
+++ b/notebooks/color_palettes.ipynb
@@ -59,11 +59,13 @@
    },
    "outputs": [],
    "source": [
+    "from matplotlib import pyplot as plt\n",
+    "import seaborn as sns\n",
     "plt.close('all')\n",
-    "#the_type='diverging'\n",
-    "#the_type='qualitative'\n",
-    "#the_type='sequential'\n",
-    "out=sns.choose_colorbrewer_palette(the_type,as_cmap=True)"
+    "the_type='diverging'\n",
+    "the_type='qualitative'\n",
+    "#the_type='sequential\n",
+    "out=sns.choose_colorbrewer_palette(the_type)"
    ]
   },
   {
